# bodine

./: .gitignore  Makefile  README.md  pyproject.toml
broker/: main.py
docs/: 2026-02-23.md  rebalancing.md
examples/: produce.py
src/bodine/broker/: broker.py  logs.py  main.py  models.py  registry.py  utils.py  wal.py
src/bodine/client/: base.py  consumer.py  producer.py  publisher.py  subscriber.py
src/bodine/examples/: consume.py  produce.py  publish.py  subscribe.py
