[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bodine"
version = "0.1.0"
description = "Message broker playground"
authors = [{ name = "GarbhanK" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # example:
    # "pika>=1.3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
